# College-projects

./: README.md
Assembly_MIPS/: project1_loops.asm  project2_memory.asm  project3_functions.asm  project4_bit_manipulation.asm
HealthRecords/: CMakeLists.txt  README
HealthRecords/include/: HealthData.h
HealthRecords/src/: HealthData.cpp  main.cpp
